small logging changes